--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,10 @@ dependencies:
   awesome_bottom_bar: ^1.2.4
   flutter_svg: ^2.0.10+1
   font_awesome_flutter: ^10.7.0
+  intl: ^0.19.0
+  horizontal_data_table: ^4.3.1
+  textfield_search: ^0.10.0
+  dropdown_button2: ^2.3.9
 
 dev_dependencies:
   flutter_test:
@@ -77,6 +81,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/icon/
+    - google_fonts/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
