--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,12 +46,18 @@ dependencies:
   horizontal_data_table: ^4.3.1
   textfield_search: ^0.10.0
   dropdown_button2: ^2.3.9
+  drift: ^2.17.0
+  sqlite3_flutter_libs: ^0.5.21
+  path_provider: ^2.1.3
+  path: ^1.9.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
   flutter_launcher_icons: ^0.13.1
+  drift_dev: ^2.17.0
+  build_runner: ^2.4.9
 
 flutter_launcher_icons:
   image_path: "assets/icon/app_icon.png"
