--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   sqlite3_flutter_libs: ^0.5.21
   path_provider: ^2.1.3
   path: ^1.9.0
+  data_table_2: ^2.5.12
 
 dev_dependencies:
   flutter_test:
