--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,9 @@ dependencies:
   path_provider: ^2.1.3
   path: ^1.9.0
   data_table_2: ^2.5.12
+  syncfusion_flutter_charts: ^25.1.42+1
+  fl_chart: ^0.67.0
+  local_auth: ^2.2.0
 
 dev_dependencies:
   flutter_test:
