--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,9 @@ dependencies:
   syncfusion_flutter_charts: ^25.1.42+1
   fl_chart: ^0.67.0
   local_auth: ^2.2.0
+  firebase_storage: ^11.7.5
+  firebase_core: ^2.31.0
+  cloud_firestore: ^4.17.3
 
 dev_dependencies:
   flutter_test:
