--- a/flutter_native_splash.yaml
+++ b/flutter_native_splash.yaml
@@ -4,4 +4,8 @@ flutter_native_splash:
   android: true
   ios: true
   image: assets/icon/app_icon.png
+  android_12: 
+    image: assets/icon/app_icon.png
+
+
 
