--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,7 @@ dependencies:
   firebase_storage: ^11.7.5
   firebase_core: ^2.31.0
   cloud_firestore: ^4.17.3
+  shimmer: ^3.0.0
 
 dev_dependencies:
   flutter_test:
