--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,7 +43,7 @@ dependencies:
   flutter_svg: ^2.0.10+1
   font_awesome_flutter: ^10.7.0
   intl: ^0.19.0
-  horizontal_data_table: ^4.3.1
+  # horizontal_data_table: ^4.3.1
   textfield_search: ^0.10.0
   dropdown_button2: ^2.3.9
   drift: ^2.17.0
@@ -52,12 +52,14 @@ dependencies:
   path: ^1.9.0
   data_table_2: ^2.5.12
   syncfusion_flutter_charts: ^25.1.42+1
-  fl_chart: ^0.67.0
   local_auth: ^2.2.0
   firebase_storage: ^11.7.5
   firebase_core: ^2.31.0
   cloud_firestore: ^4.17.3
   shimmer: ^3.0.0
+  csv: ^6.0.0
+  # file_picker: ^8.0.3
+  permission_handler: ^11.3.1
 
 dev_dependencies:
   flutter_test:
