--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,7 @@ dependencies:
   shimmer: ^3.0.0
   csv: ^6.0.0
   permission_handler: ^11.3.1
+  shared_preferences:
 
 dev_dependencies:
   flutter_test:
