cost filter added, logout button close app added

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "editor.guides.bracketPairs": true,
     "cSpell.words": [
+        "getservices",
         "Snackbars",
         "ventigo"
     ]
