--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,6 +60,7 @@ dependencies:
   csv: ^6.0.0
   permission_handler: ^11.3.1
   shared_preferences:
+  file_picker: ^8.0.3
 
 dev_dependencies:
   flutter_test:
