--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,6 +62,7 @@ dependencies:
   file_picker: ^8.0.3
   flutter_localizations:
       sdk: flutter
+  pinput: ^5.0.0
 
 dev_dependencies:
   flutter_test:
