new features like notes added

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,9 @@
 {
     "editor.guides.bracketPairs": true,
     "cSpell.words": [
+        "Autovalidate",
         "getservices",
+        "Pinput",
         "Snackbars",
         "ventigo"
     ]
