--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -7,6 +7,9 @@
         android:label="ventigo"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
+        <activity 
+            android:name="com.your.Activity"
+            android:launchMode="standard" />  <!-- or singleTop -->
         <activity
             android:name=".MainActivity"
             android:exported="true"
