--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.0.2+2
+version: 1.0.2+5
 
 environment:
   sdk: '>=3.3.1 <4.0.0'
@@ -63,6 +63,8 @@ dependencies:
   flutter_localizations:
       sdk: flutter
   pinput: ^5.0.0
+  purchases_flutter: ^8.2.2
+  purchases_ui_flutter: ^8.2.0
 
 dev_dependencies:
   flutter_test:
