--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -66,6 +66,7 @@ dependencies:
   purchases_flutter: ^8.2.2
   purchases_ui_flutter: ^8.2.0
   share_plus: ^10.0.0
+  internet_connection_checker: ^3.0.1
 
 dev_dependencies:
   flutter_test:
